[gd_scene load_steps=2 format=3 uid="uid://f24bpdygx35u"]

[ext_resource type="Script" path="res://Maps/main_menu_button.gd" id="1_tdei0"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_tdei0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 128.0
offset_right = 704.0
offset_bottom = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"
